tests/errors/scope_undefined_ty_err/scope_undefined_ty_err.c
#error scope_undefined_ty_err.scope_undefined_ty_err:5:11 The name 'NotExistingTy' here should denote to some type; but not found.
